--- a/index.html
+++ b/index.html
@@ -1,15 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <link rel="stylesheet" href="master.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="arena2">
-        öljlfdjlfkdfljdfjlksd
-    </div>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#section1">Twilight Princess</a></li>
+        <li><a href="#section2">Skyward Sword</a></li>
+        <li><a href="#section3">Breath Of The Wild</a></li>
+      </ul>
+    </nav>
+  </header>
+  <div style="background-color: #0a2c0ac4;">
+    <section id="section1">
+      <!--Vet inte om jag behöver kommentera koden här, men med section id's kan jag ändra på de olika texterna var för sig -->
+      <img src="images/Twilight_Princess.jpg" alt="Bild på twilight princess loggan"
+        style="width: 1000px; height: auto;">
+      <h1>Zelda: Twilight princess</h1>
+      <p class="BOTW"> "The Legend of Zelda: Twilight Princess" is an action-adventure video game developed and
+        published by Nintendo. It was released for the Nintendo GameCube and Wii consoles in 2006 and later re-released
+        for the Wii U in 2016. Set in the fictional kingdom of Hyrule, the game follows the story of Link, the series'
+        iconic protagonist.
+        In "Twilight Princess," Hyrule is threatened by a dark force known as the Twilight Realm, which seeks to engulf
+        the land in darkness. Link, a young farmhand from the village of Ordon, is chosen by fate to embark on a
+        perilous journey to save Hyrule.</p>
+    </section>
+
+    <section id="section2">
+      <img src="images/Skyward_Sword.png" alt="bild på Skyward_sword loggan" style="width: 700px; height: auto;">
+      <h1>Zelda: Skyward Sword</h1>
+      <p class="BOTW"> "The Legend of Zelda: Skyward Sword" is an action-adventure video game developed and published by
+        Nintendo. It was released in 2011 for the Wii console and marked the franchise's 25th anniversary. Skyward Sword
+        serves as a prequel to the entire Zelda series, chronicling the origin of the Master Sword and the eternal
+        conflict between good and evil.
+        In "Skyward Sword," players assume the role of Link, a young knight-in-training who resides in the floating
+        island city of Skyloft. The story revolves around the quest to rescue Link's childhood friend, Zelda, who has
+        been taken by a malevolent force known as Demise. To save her and unravel the mysteries of their world, Link
+        must embark on a journey through the vast sky and the perilous surface below.</p>
+    </section>
+
+    <section id="section3">
+      <img src="images/BOTW.jpg" alt="en bild från breath of the wild spelet" style="width: 900px; height: auto;">
+      <h1>Zelda: Breath Of The Wild</h1>
+      <p class="BOTW"> "The Legend of Zelda: Breath of the Wild" is an open-world action-adventure video game developed
+        and published by Nintendo. It was released in 2017 as a launch title for the Nintendo Switch console and also
+        made available for the Wii U. Set in the expansive kingdom of Hyrule, the game revolutionized the Zelda
+        franchise with its vast open-world exploration and nonlinear gameplay.
+        In "Breath of the Wild," players assume the role of Link, who awakens from a century-long slumber to find Hyrule
+        in a state of ruin. The once-great kingdom has fallen to the destructive power of Calamity Ganon, an ancient
+        evil that threatens to consume Hyrule once again. With only fragmented memories of the past, Link embarks on a
+        monumental quest to defeat Ganon and save Princess Zelda and the kingdom.</p>
+    </section>
+
+
+    <footer>
+      <p>&copy; 2023 Ludvig Brandt</p>
+      <!--Copyright Ludvig :) -->
+      <a href="#" class="scroll-to-top-button">Scroll to Top</a>
+    </footer>
 </body>
+
 </html>
